--- a/.gitattributes
+++ b/.gitattributes
@@ -1542,6 +1542,11 @@ components/tachart/demo/basic/demo.lpr svneol=native#text/plain
 components/tachart/demo/basic/unit1.lfm svneol=native#text/plain
 components/tachart/demo/basic/unit1.lrs svneol=native#text/plain
 components/tachart/demo/basic/unit1.pas svneol=native#text/plain
+components/tachart/demo/chartsource/chartsourcedemo.lpi svneol=native#text/plain
+components/tachart/demo/chartsource/chartsourcedemo.lpr svneol=native#text/plain
+components/tachart/demo/chartsource/main.lfm svneol=native#text/plain
+components/tachart/demo/chartsource/main.lrs svneol=native#text/plain
+components/tachart/demo/chartsource/main.pas svneol=native#text/pascal
 components/tachart/demo/dragdrop/dragdropdemo.lpi svneol=native#text/plain
 components/tachart/demo/dragdrop/dragdropdemo.lpr svneol=native#text/plain
 components/tachart/demo/dragdrop/main.lfm svneol=native#text/plain
