TAChart: Add icons for chart sources
git-svn-id: trunk@20170 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1579,6 +1579,8 @@ components/tachart/taserieseditor.pas svneol=native#text/plain
 components/tachart/tasources.pas svneol=native#text/pascal
 components/tachart/tatypes.pas svneol=native#text/plain
 components/tachart/tchart.png -text svneol=unset#images/png
+components/tachart/tlistchartsource.png -text
+components/tachart/trandomchartsource.png -text
 components/tdbf/Makefile svneol=native#text/plain
 components/tdbf/Makefile.fpc svneol=native#text/plain
 components/tdbf/dbflaz.lpk svneol=native#text/pascal
