--- a/.gitattributes
+++ b/.gitattributes
@@ -1579,9 +1579,9 @@ components/tachart/taserieseditor.pas svneol=native#text/plain
 components/tachart/tasources.pas svneol=native#text/pascal
 components/tachart/tatypes.pas svneol=native#text/plain
 components/tachart/tchart.png -text svneol=unset#images/png
-components/tachart/tlistchartsource.png -text
-components/tachart/trandomchartsource.png -text
-components/tachart/tuserdefinedchartsource.png -text
+components/tachart/tlistchartsource.png -text svneol=unset#images/png
+components/tachart/trandomchartsource.png -text svneol=unset#images/png
+components/tachart/tuserdefinedchartsource.png -text svneol=unset#images/png
 components/tdbf/Makefile svneol=native#text/plain
 components/tdbf/Makefile.fpc svneol=native#text/plain
 components/tdbf/dbflaz.lpk svneol=native#text/pascal
