ide: forgotten files
git-svn-id: trunk@20185 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2762,6 +2762,9 @@ ide/frames/formed_options.pas svneol=native#text/pascal
 ide/frames/fpdoc_options.lfm svneol=native#text/plain
 ide/frames/fpdoc_options.lrs svneol=native#text/pascal
 ide/frames/fpdoc_options.pas svneol=native#text/pascal
+ide/frames/help_general_options.lfm svneol=native#text/plain
+ide/frames/help_general_options.lrs svneol=native#text/plain
+ide/frames/help_general_options.pas svneol=native#text/plain
 ide/frames/naming_options.lfm svneol=native#text/plain
 ide/frames/naming_options.lrs svneol=native#text/pascal
 ide/frames/naming_options.pas svneol=native#text/pascal
