TAChart: Add a demo for db-aware chart
git-svn-id: trunk@20218 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1547,6 +1547,11 @@ components/tachart/demo/chartsource/chartsourcedemo.lpr svneol=native#text/plain
 components/tachart/demo/chartsource/main.lfm svneol=native#text/plain
 components/tachart/demo/chartsource/main.lrs svneol=native#text/plain
 components/tachart/demo/chartsource/main.pas svneol=native#text/pascal
+components/tachart/demo/db/dbdemo.lpi svneol=native#text/plain
+components/tachart/demo/db/dbdemo.lpr svneol=native#text/pascal
+components/tachart/demo/db/main.lfm svneol=native#text/plain
+components/tachart/demo/db/main.lrs svneol=native#text/plain
+components/tachart/demo/db/main.pas svneol=native#text/pascal
 components/tachart/demo/dragdrop/dragdropdemo.lpi svneol=native#text/plain
 components/tachart/demo/dragdrop/dragdropdemo.lpr svneol=native#text/plain
 components/tachart/demo/dragdrop/main.lfm svneol=native#text/plain
