dockmanager example: now notebooks can be created in an empty docksite. Added toolbar demo project.
git-svn-id: trunk@20299 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2223,6 +2223,12 @@ examples/dockmanager/easytree/ftree.lfm svneol=native#text/plain
 examples/dockmanager/easytree/ftree.lrs svneol=native#text/plain
 examples/dockmanager/easytree/ftree.pas svneol=native#text/plain
 examples/dockmanager/easytree/zoneheader.inc svneol=native#text/pascal
+examples/dockmanager/toolbar/README.txt svneol=native#text/plain
+examples/dockmanager/toolbar/test1.lpi svneol=native#text/plain
+examples/dockmanager/toolbar/test1.lpr svneol=native#text/plain
+examples/dockmanager/toolbar/unit1.lfm svneol=native#text/plain
+examples/dockmanager/toolbar/unit1.lrs svneol=native#text/plain
+examples/dockmanager/toolbar/unit1.pas svneol=native#text/pascal
 examples/dragimagelist/project1.lpi svneol=native#text/plain
 examples/dragimagelist/project1.lpr svneol=native#text/pascal
 examples/dragimagelist/readme.txt svneol=native#text/plain
