SynEdit: Added configuration for mouse behaviour Issue #1878, Issue #8603, see http://wiki.lazarus.freepascal.org/Editor_Options_Mouse
git-svn-id: trunk@20353 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1573,6 +1573,7 @@ components/synedit/syneditmarkupspecialline.pp svneol=native#text/plain
 components/synedit/syneditmarkupwordgroup.pp svneol=native#text/plain
 components/synedit/syneditmiscclasses.pp svneol=native#text/pascal
 components/synedit/syneditmiscprocs.pp svneol=native#text/pascal
+components/synedit/syneditmousecmds.pp svneol=native#text/pascal
 components/synedit/syneditplugins.pas svneol=native#text/pascal
 components/synedit/syneditpointclasses.pas svneol=native#text/plain
 components/synedit/syneditregexsearch.pas svneol=native#text/pascal
@@ -2877,6 +2878,12 @@ ide/frames/editor_general_options.pas svneol=native#text/pascal
 ide/frames/editor_keymapping_options.lfm svneol=native#text/plain
 ide/frames/editor_keymapping_options.lrs svneol=native#text/pascal
 ide/frames/editor_keymapping_options.pas svneol=native#text/pascal
+ide/frames/editor_mouseaction_options.lfm svneol=native#text/plain
+ide/frames/editor_mouseaction_options.lrs svneol=native#text/plain
+ide/frames/editor_mouseaction_options.pas svneol=native#text/pascal
+ide/frames/editor_mouseaction_options_dlg.lfm svneol=native#text/plain
+ide/frames/editor_mouseaction_options_dlg.lrs svneol=native#text/plain
+ide/frames/editor_mouseaction_options_dlg.pas svneol=native#text/pascal
 ide/frames/files_options.lfm svneol=native#text/plain
 ide/frames/files_options.lrs svneol=native#text/pascal
 ide/frames/files_options.pas svneol=native#text/pascal
