EditorOptions/Mouse: Cleanup / Renamed unit
git-svn-id: trunk@20385 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2885,9 +2885,6 @@ ide/frames/editor_keymapping_options.pas svneol=native#text/pascal
 ide/frames/editor_mouseaction_options.lfm svneol=native#text/plain
 ide/frames/editor_mouseaction_options.lrs svneol=native#text/plain
 ide/frames/editor_mouseaction_options.pas svneol=native#text/pascal
-ide/frames/editor_mouseaction_options_dlg.lfm svneol=native#text/plain
-ide/frames/editor_mouseaction_options_dlg.lrs svneol=native#text/plain
-ide/frames/editor_mouseaction_options_dlg.pas svneol=native#text/pascal
 ide/frames/files_options.lfm svneol=native#text/plain
 ide/frames/files_options.lrs svneol=native#text/pascal
 ide/frames/files_options.pas svneol=native#text/pascal
@@ -2984,6 +2981,9 @@ ide/makeresstrdlg.lfm svneol=native#text/plain
 ide/makeresstrdlg.lrs svneol=native#text/plain
 ide/makeresstrdlg.pas svneol=native#text/pascal
 ide/miscoptions.pas svneol=native#text/pascal
+ide/mouseactiondialog.lfm svneol=native#text/plain
+ide/mouseactiondialog.lrs svneol=native#text/plain
+ide/mouseactiondialog.pas svneol=native#text/pascal
 ide/msgquickfixes.pas svneol=native#text/plain
 ide/msgview.lfm svneol=native#text/plain
 ide/msgview.lrs svneol=native#text/plain
