dockmanager example: package now seems to work
git-svn-id: trunk@20392 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2331,6 +2331,12 @@ examples/dockmanager/easytree/ftree.lfm svneol=native#text/plain
 examples/dockmanager/easytree/ftree.lrs svneol=native#text/plain
 examples/dockmanager/easytree/ftree.pas svneol=native#text/plain
 examples/dockmanager/easytree/zoneheader.inc svneol=native#text/pascal
+examples/dockmanager/package/easy_dock_images.lrs svneol=native#text/plain
+examples/dockmanager/package/easydocksite.pas svneol=native#text/plain
+examples/dockmanager/package/fdockbook.lfm svneol=native#text/plain
+examples/dockmanager/package/fdockbook.lrs svneol=native#text/plain
+examples/dockmanager/package/fdockbook.pas svneol=native#text/pascal
+examples/dockmanager/package/zoneheader.inc svneol=native#text/pascal
 examples/dockmanager/toolbar/README.txt svneol=native#text/plain
 examples/dockmanager/toolbar/test1.lpi svneol=native#text/plain
 examples/dockmanager/toolbar/test1.lpr svneol=native#text/plain
