--- a/.gitattributes
+++ b/.gitattributes
@@ -118,6 +118,8 @@ components/codetools/examples/fixfilenames.lpi svneol=native#text/plain
 components/codetools/examples/fixfilenames.pas svneol=native#text/plain
 components/codetools/examples/fixh2pasdirectives.lpi svneol=native#text/plain
 components/codetools/examples/fixh2pasdirectives.lpr svneol=native#text/plain
+components/codetools/examples/fpcunitlinks.lpi svneol=native#text/plain
+components/codetools/examples/fpcunitlinks.pas svneol=native#text/pascal
 components/codetools/examples/getcontext.lpi svneol=native#text/plain
 components/codetools/examples/getcontext.lpr svneol=native#text/plain
 components/codetools/examples/h2pastest.lpi svneol=native#text/plain
