Mac OS X: moved startlazarus bundle to lazarus.app as a resource
git-svn-id: trunk@20462 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3663,6 +3663,8 @@ lazarus.app/Contents/MacOS/startlazarus -text svneol=unset#application/octet-str
 lazarus.app/Contents/PkgInfo svneol=native#text/plain
 lazarus.app/Contents/Resources/README.rtf svneol=native#text/rtf
 lazarus.app/Contents/Resources/lazarus.icns -text svneol=unset#image/x-icns
+lazarus.app/Contents/Resources/startlazarus.app/Contents/Info.plist svneol=native#text/plain
+lazarus.app/Contents/Resources/startlazarus.app/Contents/PkgInfo svneol=native#text/plain
 lcl/LAYOUT.txt svneol=native#text/plain
 lcl/actnlist.pas svneol=native#text/pascal
 lcl/alllclunits.pp svneol=native#text/pascal
@@ -4529,8 +4531,6 @@ packager/ucomponentmanmain.pas svneol=native#text/pascal
 packager/ufrmaddcomponent.lfm svneol=native#text/plain
 packager/ufrmaddcomponent.lrs svneol=native#text/pascal
 packager/ufrmaddcomponent.pas svneol=native#text/pascal
-startlazarus.app/Contents/Info.plist svneol=native#text/plain
-startlazarus.app/Contents/PkgInfo svneol=native#text/plain
 test/bugs/12204/bug12204.lpi svneol=native#text/plain
 test/bugs/12204/bug12204.pas svneol=native#text/plain
 test/bugs/12204/expected.txt svneol=native#text/plain
