dockmanager example: added missing package files
git-svn-id: trunk@20514 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2317,24 +2317,21 @@ examples/docking/unit1.lrs svneol=native#text/pascal
 examples/docking/unit1.pas svneol=native#text/pascal
 examples/dockmanager/easytree/BUGS.txt svneol=native#text/plain
 examples/dockmanager/easytree/README.txt svneol=native#text/plain
-examples/dockmanager/easytree/easy_dock_images.lrs svneol=native#text/plain
 examples/dockmanager/easytree/easydocking.lpi svneol=native#text/plain
 examples/dockmanager/easytree/easydocking.lpr svneol=native#text/plain
-examples/dockmanager/easytree/easydocksite.pas svneol=native#text/plain
 examples/dockmanager/easytree/fdockable.lfm svneol=native#text/plain
 examples/dockmanager/easytree/fdockable.lrs svneol=native#text/plain
 examples/dockmanager/easytree/fdockable.pas svneol=native#text/plain
-examples/dockmanager/easytree/fdockbook.lfm svneol=native#text/plain
-examples/dockmanager/easytree/fdockbook.lrs svneol=native#text/plain
-examples/dockmanager/easytree/fdockbook.pas svneol=native#text/pascal
 examples/dockmanager/easytree/fmain.lfm svneol=native#text/plain
 examples/dockmanager/easytree/fmain.lrs svneol=native#text/plain
 examples/dockmanager/easytree/fmain.pas svneol=native#text/plain
 examples/dockmanager/easytree/ftree.lfm svneol=native#text/plain
 examples/dockmanager/easytree/ftree.lrs svneol=native#text/plain
 examples/dockmanager/easytree/ftree.pas svneol=native#text/plain
-examples/dockmanager/easytree/zoneheader.inc svneol=native#text/pascal
 examples/dockmanager/package/easy_dock_images.lrs svneol=native#text/plain
+examples/dockmanager/package/easydocking.pas svneol=native#text/pascal
+examples/dockmanager/package/easydockmgr.lpk svneol=native#text/plain
+examples/dockmanager/package/easydockmgr.pas svneol=native#text/pascal
 examples/dockmanager/package/easydocksite.pas svneol=native#text/plain
 examples/dockmanager/package/fdockbook.lfm svneol=native#text/plain
 examples/dockmanager/package/fdockbook.lrs svneol=native#text/plain
