Applied changes from Alex22
git-svn-id: trunk@20532 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -41,7 +41,7 @@ components/chmhelp/democontrol/unit1.lrs svneol=native#text/plain
 components/chmhelp/democontrol/unit1.pas svneol=native#text/plain
 components/chmhelp/lhelp/back.xpm svneol=native#text/plain
 components/chmhelp/lhelp/basecontentprovider.pas svneol=native#text/plain
-components/chmhelp/lhelp/chmcontentprovider.pas svneol=native#text/plain
+components/chmhelp/lhelp/chmcontentprovider.pas -text svneol=native#text/plain
 components/chmhelp/lhelp/chmdataprovider.pas svneol=native#text/plain
 components/chmhelp/lhelp/chmpopup.lfm svneol=native#text/plain
 components/chmhelp/lhelp/chmpopup.lrs svneol=native#text/plain
@@ -57,10 +57,10 @@ components/chmhelp/lhelp/images/table_open.png -text
 components/chmhelp/lhelp/lhelp.ico -text svneol=unset#image/icon
 components/chmhelp/lhelp/lhelp.lpi svneol=native#text/plain
 components/chmhelp/lhelp/lhelp.lpr svneol=native#text/plain
-components/chmhelp/lhelp/lhelp.manifest svneol=native#text/plain
-components/chmhelp/lhelp/lhelp.rc svneol=native#text/plain
-components/chmhelp/lhelp/lhelpcore.lfm svneol=native#text/plain
-components/chmhelp/lhelp/lhelpcore.lrs svneol=native#text/plain
+components/chmhelp/lhelp/lhelp.manifest -text svneol=native#text/plain
+components/chmhelp/lhelp/lhelp.rc -text svneol=native#text/plain
+components/chmhelp/lhelp/lhelpcore.lfm -text svneol=native#text/plain
+components/chmhelp/lhelp/lhelpcore.lrs -text svneol=native#text/plain
 components/chmhelp/lhelp/lhelpcore.pas svneol=native#text/plain
 components/chmhelp/lhelp/lnethttpdataprovider.pas svneol=native#text/plain
 components/chmhelp/packages/help/lhelpcontrol.pas svneol=native#text/plain
