--- a/.gitattributes
+++ b/.gitattributes
@@ -60,7 +60,7 @@ components/chmhelp/lhelp/lhelp.lpr svneol=native#text/plain
 components/chmhelp/lhelp/lhelp.manifest -text svneol=native#text/plain
 components/chmhelp/lhelp/lhelp.rc -text svneol=native#text/plain
 components/chmhelp/lhelp/lhelpcore.lfm -text svneol=native#text/plain
-components/chmhelp/lhelp/lhelpcore.lrs -text svneol=native#text/pascal
+components/chmhelp/lhelp/lhelpcore.lrs svneol=native#text/pascal
 components/chmhelp/lhelp/lhelpcore.pas svneol=native#text/plain
 components/chmhelp/lhelp/lnethttpdataprovider.pas svneol=native#text/plain
 components/chmhelp/packages/help/lhelpcontrol.pas svneol=native#text/plain
