--- a/.gitattributes
+++ b/.gitattributes
@@ -332,6 +332,10 @@ components/editortoolbar/images/preferences16.xpm -text svneol=unset#image/x-xpi
 components/editortoolbar/jumpto.pas svneol=native#text/plain
 components/editortoolbar/jumpto_impl.pas svneol=native#text/plain
 components/editortoolbar/toolbar.lrs svneol=native#text/pascal
+components/education/educationlaz.lpk svneol=native#text/plain
+components/education/educationlaz.pas svneol=native#text/plain
+components/education/eduoptionsdlg.lfm svneol=native#text/plain
+components/education/eduoptionsdlg.pas svneol=native#text/plain
 components/filebrowser/frmconfigfilebrowser.lfm svneol=native#text/plain
 components/filebrowser/frmconfigfilebrowser.lrs svneol=native#text/pascal
 components/filebrowser/frmconfigfilebrowser.pp svneol=native#text/plain
