educationlaz: added options base class
git-svn-id: trunk@20640 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -335,8 +335,13 @@ components/editortoolbar/toolbar.lrs svneol=native#text/pascal
 components/education/README.txt svneol=native#text/plain
 components/education/educationlaz.lpk svneol=native#text/plain
 components/education/educationlaz.pas svneol=native#text/plain
+components/education/eduoptions.pas svneol=native#text/plain
 components/education/eduoptionsdlg.lfm svneol=native#text/plain
+components/education/eduoptionsdlg.lrs svneol=native#text/plain
 components/education/eduoptionsdlg.pas svneol=native#text/plain
+components/education/edupkgsystem.lfm svneol=native#text/plain
+components/education/edupkgsystem.lrs svneol=native#text/plain
+components/education/edupkgsystem.pas svneol=native#text/plain
 components/filebrowser/frmconfigfilebrowser.lfm svneol=native#text/plain
 components/filebrowser/frmconfigfilebrowser.lrs svneol=native#text/pascal
 components/filebrowser/frmconfigfilebrowser.pp svneol=native#text/plain
