--- a/.gitattributes
+++ b/.gitattributes
@@ -4780,6 +4780,9 @@ tools/lazdatadesktop/frmimportdd.pp svneol=native#text/plain
 tools/lazdatadesktop/frmmain.lfm svneol=native#text/plain
 tools/lazdatadesktop/frmmain.lrs svneol=native#text/pascal
 tools/lazdatadesktop/frmmain.pp svneol=native#text/plain
+tools/lazdatadesktop/frmselectconnectiontype.lfm svneol=native#text/plain
+tools/lazdatadesktop/frmselectconnectiontype.lrs svneol=native#text/plain
+tools/lazdatadesktop/frmselectconnectiontype.pp svneol=native#text/plain
 tools/lazdatadesktop/frmsqlconnect.lfm svneol=native#text/plain
 tools/lazdatadesktop/frmsqlconnect.lrs svneol=native#text/pascal
 tools/lazdatadesktop/frmsqlconnect.pp svneol=native#text/plain
