--- a/.gitattributes
+++ b/.gitattributes
@@ -2326,6 +2326,16 @@ examples/docking/project1.rc svneol=native#text/plain
 examples/docking/unit1.lfm svneol=native#text/plain
 examples/docking/unit1.lrs svneol=native#text/pascal
 examples/docking/unit1.pas svneol=native#text/pascal
+examples/dockmanager/easyedit/EasyEditor.ico -text
+examples/dockmanager/easyedit/EasyEditor.lpr svneol=native#text/plain
+examples/dockmanager/easyedit/easyeditor.lpi svneol=native#text/plain
+examples/dockmanager/easyedit/easyeditor.lrs svneol=native#text/plain
+examples/dockmanager/easyedit/editmain.lfm svneol=native#text/plain
+examples/dockmanager/easyedit/editmain.lrs svneol=native#text/plain
+examples/dockmanager/easyedit/editmain.pas svneol=native#text/pascal
+examples/dockmanager/easyedit/feditform.lfm svneol=native#text/plain
+examples/dockmanager/easyedit/feditform.lrs svneol=native#text/plain
+examples/dockmanager/easyedit/feditform.pas svneol=native#text/pascal
 examples/dockmanager/easytree/BUGS.txt svneol=native#text/plain
 examples/dockmanager/easytree/README.txt svneol=native#text/plain
 examples/dockmanager/easytree/easydocking.lpi svneol=native#text/plain
