dockmanager example: really added editbook form.
git-svn-id: trunk@20780 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2327,10 +2327,14 @@ examples/docking/unit1.lfm svneol=native#text/plain
 examples/docking/unit1.lrs svneol=native#text/pascal
 examples/docking/unit1.pas svneol=native#text/pascal
 examples/dockmanager/easyedit/easyeditor.lpi svneol=native#text/plain
+examples/dockmanager/easyedit/easyeditor.lpr svneol=native#text/plain
 examples/dockmanager/easyedit/easyeditor.lrs svneol=native#text/plain
 examples/dockmanager/easyedit/editmain.lfm svneol=native#text/plain
 examples/dockmanager/easyedit/editmain.lrs svneol=native#text/plain
 examples/dockmanager/easyedit/editmain.pas svneol=native#text/pascal
+examples/dockmanager/easyedit/feditbook.lfm svneol=native#text/plain
+examples/dockmanager/easyedit/feditbook.lrs svneol=native#text/plain
+examples/dockmanager/easyedit/feditbook.pas svneol=native#text/pascal
 examples/dockmanager/easyedit/feditform.lfm svneol=native#text/plain
 examples/dockmanager/easyedit/feditform.lrs svneol=native#text/plain
 examples/dockmanager/easyedit/feditform.pas svneol=native#text/pascal
