--- a/.gitattributes
+++ b/.gitattributes
@@ -2360,6 +2360,10 @@ examples/dockmanager/package/fdockbook.lfm svneol=native#text/plain
 examples/dockmanager/package/fdockbook.lrs svneol=native#text/pascal
 examples/dockmanager/package/fdockbook.pas svneol=native#text/pascal
 examples/dockmanager/package/zoneheader.inc svneol=native#text/pascal
+examples/dockmanager/patches/FloatHostDockable.patch svneol=native#text/pascal
+examples/dockmanager/patches/NewClients.patch svneol=native#text/pascal
+examples/dockmanager/patches/README.txt svneol=native#text/plain
+examples/dockmanager/patches/ToolButtonAutoSizeAlign.patch svneol=native#text/pascal
 examples/dockmanager/toolbar/README.txt svneol=native#text/plain
 examples/dockmanager/toolbar/test1.lpi svneol=native#text/plain
 examples/dockmanager/toolbar/test1.lpr svneol=native#text/plain
