--- a/.gitattributes
+++ b/.gitattributes
@@ -2326,6 +2326,7 @@ examples/docking/project1.rc svneol=native#text/plain
 examples/docking/unit1.lfm svneol=native#text/plain
 examples/docking/unit1.lrs svneol=native#text/pascal
 examples/docking/unit1.pas svneol=native#text/pascal
+examples/dockmanager/README.txt svneol=native#text/plain
 examples/dockmanager/easyedit/easyeditor.lpi svneol=native#text/plain
 examples/dockmanager/easyedit/easyeditor.lpr svneol=native#text/plain
 examples/dockmanager/easyedit/easyeditor.lrs svneol=native#text/plain
@@ -2351,6 +2352,15 @@ examples/dockmanager/easytree/fmain.pas svneol=native#text/plain
 examples/dockmanager/easytree/ftree.lfm svneol=native#text/plain
 examples/dockmanager/easytree/ftree.lrs svneol=native#text/pascal
 examples/dockmanager/easytree/ftree.pas svneol=native#text/plain
+examples/dockmanager/elasticsite/fdockclient.lfm svneol=native#text/plain
+examples/dockmanager/elasticsite/fdockclient.lrs svneol=native#text/plain
+examples/dockmanager/elasticsite/fdockclient.pas svneol=native#text/pascal
+examples/dockmanager/elasticsite/felastic.lfm svneol=native#text/plain
+examples/dockmanager/elasticsite/felastic.lrs svneol=native#text/plain
+examples/dockmanager/elasticsite/felastic.pas svneol=native#text/pascal
+examples/dockmanager/elasticsite/project1.lpi svneol=native#text/plain
+examples/dockmanager/elasticsite/project1.lpr svneol=native#text/plain
+examples/dockmanager/elasticsite/project1.lrs svneol=native#text/plain
 examples/dockmanager/package/easy_dock_images.lrs svneol=native#text/pascal
 examples/dockmanager/package/easydocking.pas svneol=native#text/pascal
 examples/dockmanager/package/easydockmgr.lpk svneol=native#text/plain
