education: added frames
git-svn-id: trunk@20797 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -336,6 +336,9 @@ components/editortoolbar/toolbar.lrs svneol=native#text/pascal
 components/education/README.txt svneol=native#text/plain
 components/education/educationlaz.lpk svneol=native#text/plain
 components/education/educationlaz.pas svneol=native#text/plain
+components/education/eduenvoptsframe.lfm svneol=native#text/plain
+components/education/eduenvoptsframe.lrs svneol=native#text/plain
+components/education/eduenvoptsframe.pas svneol=native#text/plain
 components/education/eduoptions.pas svneol=native#text/plain
 components/education/eduoptionsdlg.lfm svneol=native#text/plain
 components/education/eduoptionsdlg.lrs svneol=native#text/plain
