LazReport, added portuguese translation from Marcelo Borges de Paula, issue #14133
git-svn-id: trunk@20838 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -948,6 +948,7 @@ components/lazreport/source/languages/lr_const.es.po svneol=native#text/plain
 components/lazreport/source/languages/lr_const.fr.po svneol=native#text/plain
 components/lazreport/source/languages/lr_const.id.po svneol=native#text/plain
 components/lazreport/source/languages/lr_const.lt.po svneol=native#text/plain
+components/lazreport/source/languages/lr_const.pb.po svneol=native#text/plain
 components/lazreport/source/languages/lr_const.pl.po svneol=native#text/plain
 components/lazreport/source/languages/lr_const.po svneol=native#text/plain
 components/lazreport/source/languages/lr_const.ru.po svneol=native#text/plain
