--- a/.gitattributes
+++ b/.gitattributes
@@ -2627,6 +2627,7 @@ examples/popupnotifier/unit1.lrs svneol=native#text/pascal
 examples/popupnotifier/unit1.pas svneol=native#text/plain
 examples/postscript/samplepostscriptcanvas.lpi svneol=native#text/plain
 examples/postscript/samplepostscriptcanvas.lpr svneol=native#text/pascal
+examples/postscript/small.png -text
 examples/postscript/usamplepostscriptcanvas.lfm svneol=native#text/plain
 examples/postscript/usamplepostscriptcanvas.lrs svneol=native#text/pascal
 examples/postscript/usamplepostscriptcanvas.pas svneol=native#text/pascal
