--- a/.gitattributes
+++ b/.gitattributes
@@ -1634,6 +1634,7 @@ components/synedit/synhighlightervb.pas svneol=native#text/plain
 components/synedit/synhighlighterxml.pas svneol=native#text/pascal
 components/synedit/synmacrorecorder.pas svneol=native#text/pascal
 components/synedit/synmemo.pas svneol=native#text/pascal
+components/synedit/synpluginsyncroedit.pp svneol=native#text/pascal
 components/synedit/synpluginsyncronizededitbase.pp svneol=native#text/pascal
 components/synedit/synplugintemplateedit.pp svneol=native#text/pascal
 components/synedit/synpropertyeditobjectlist.lfm svneol=native#text/plain
@@ -3627,6 +3628,7 @@ images/sourceeditor/bookmark6.png -text
 images/sourceeditor/bookmark7.png -text
 images/sourceeditor/bookmark8.png -text
 images/sourceeditor/bookmark9.png -text
+images/sourceeditor/tsynsyncroedit.png -text
 images/splash_logo.bat svneol=native#text/x-msdos-program
 images/splash_logo.lrs svneol=native#text/pascal
 images/splash_logo.png -text svneol=unset#image/png
