--- a/.gitattributes
+++ b/.gitattributes
@@ -41,7 +41,7 @@ components/chmhelp/democontrol/unit1.lrs svneol=native#text/pascal
 components/chmhelp/democontrol/unit1.pas svneol=native#text/plain
 components/chmhelp/lhelp/back.xpm svneol=native#text/plain
 components/chmhelp/lhelp/basecontentprovider.pas svneol=native#text/plain
-components/chmhelp/lhelp/chmcontentprovider.pas -text svneol=native#text/plain
+components/chmhelp/lhelp/chmcontentprovider.pas svneol=native#text/plain
 components/chmhelp/lhelp/chmdataprovider.pas svneol=native#text/plain
 components/chmhelp/lhelp/chmpopup.lfm svneol=native#text/plain
 components/chmhelp/lhelp/chmpopup.lrs svneol=native#text/pascal
