--- a/.gitattributes
+++ b/.gitattributes
@@ -1647,6 +1647,10 @@ components/synedit/synpropertyeditobjectlist.lrs svneol=native#text/pascal
 components/synedit/synpropertyeditobjectlist.pas svneol=native#text/plain
 components/synedit/synregexpr.pas svneol=native#text/pascal
 components/synedit/syntextdrawer.pp svneol=native#text/pascal
+components/synedit/test/SynTest.lpi svneol=native#text/plain
+components/synedit/test/SynTest.lpr svneol=native#text/pascal
+components/synedit/test/testbase.pas svneol=native#text/pascal
+components/synedit/test/testsynselection.pas svneol=native#text/pascal
 components/synunihighlighter/CHANGES.txt svneol=native#text/plain
 components/synunihighlighter/CREDITS.txt svneol=native#text/plain
 components/synunihighlighter/README.txt svneol=native#text/plain
