--- a/.gitattributes
+++ b/.gitattributes
@@ -4223,6 +4223,7 @@ lcl/interfaces/gtk2/interfaces.pas svneol=native#text/pascal
 lcl/interfaces/gtk2/issues.xml svneol=native#text/xml
 lcl/interfaces/gtk2/tests/checkbuttononfixed.lpi svneol=native#text/plain
 lcl/interfaces/gtk2/tests/checkbuttononfixed.lpr svneol=native#text/plain
+lcl/interfaces/gtk2/tests/stutter.pas svneol=native#text/plain
 lcl/interfaces/nogui/Makefile svneol=native#text/plain
 lcl/interfaces/nogui/Makefile.fpc svneol=native#text/plain
 lcl/interfaces/nogui/interfaces.pp svneol=native#text/plain
