EditorOptions: added simplified Mouse settings
git-svn-id: trunk@21232 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2943,6 +2943,9 @@ ide/frames/editor_keymapping_options.pas svneol=native#text/pascal
 ide/frames/editor_mouseaction_options.lfm svneol=native#text/plain
 ide/frames/editor_mouseaction_options.lrs svneol=native#text/pascal
 ide/frames/editor_mouseaction_options.pas svneol=native#text/pascal
+ide/frames/editor_mouseaction_options_advanced.lfm svneol=native#text/plain
+ide/frames/editor_mouseaction_options_advanced.lrs svneol=native#text/plain
+ide/frames/editor_mouseaction_options_advanced.pas svneol=native#text/pascal
 ide/frames/files_options.lfm svneol=native#text/plain
 ide/frames/files_options.lrs svneol=native#text/pascal
 ide/frames/files_options.pas svneol=native#text/pascal
