added tool debugserver from Michael van Canneyt
git-svn-id: trunk@21453 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4704,6 +4704,19 @@ tools/chmmaker/unit1.pas svneol=native#text/plain
 tools/compile_all.sh svneol=native#text/plain
 tools/convert_po_file_to_utf-8.sh svneol=native#text/plain
 tools/copy_po_files_to_lazarus_sources.sh -text svneol=native#application/x-sh
+tools/debugserver/README.txt svneol=native#text/plain
+tools/debugserver/debugserver.ico -text
+tools/debugserver/debugserver.lpi svneol=native#text/plain
+tools/debugserver/debugserver.lpr svneol=native#text/plain
+tools/debugserver/debugserver.lrs svneol=native#text/plain
+tools/debugserver/debugserver.manifest svneol=native#text/plain
+tools/debugserver/debugserver.rc svneol=native#text/plain
+tools/debugserver/frmmain.lfm svneol=native#text/plain
+tools/debugserver/frmmain.lrs svneol=native#text/plain
+tools/debugserver/frmmain.pp svneol=native#text/pascal
+tools/debugserver/frmoptions.lfm svneol=native#text/plain
+tools/debugserver/frmoptions.lrs svneol=native#text/plain
+tools/debugserver/frmoptions.pp svneol=native#text/pascal
 tools/delete_non_svn_files.pl svneol=native#text/plain
 tools/find_missing_lpl_files.sh svneol=native#text/plain
 tools/getallpofiles.sh -text svneol=native#application/x-sh
