IDE: started build mode frame
git-svn-id: trunk@21557 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2893,6 +2893,9 @@ ide/frames/atom_checkboxes_options.pas svneol=native#text/pascal
 ide/frames/backup_options.lfm svneol=native#text/plain
 ide/frames/backup_options.lrs svneol=native#text/pascal
 ide/frames/backup_options.pas svneol=native#text/pascal
+ide/frames/buildmodeseditor.lfm svneol=native#text/plain
+ide/frames/buildmodeseditor.lrs svneol=native#text/plain
+ide/frames/buildmodeseditor.pas svneol=native#text/plain
 ide/frames/codeexplorer_categories_options.lfm svneol=native#text/plain
 ide/frames/codeexplorer_categories_options.lrs svneol=native#text/pascal
 ide/frames/codeexplorer_categories_options.pas svneol=native#text/pascal
