* Patch from Marcelo B Paula to enable internationalization (issue #14276)
git-svn-id: trunk@21583 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -320,9 +320,12 @@ components/dbexport/frmexportprogress.pp svneol=native#text/plain
 components/dbexport/frmselectexportformat.lfm svneol=native#text/plain
 components/dbexport/frmselectexportformat.lrs svneol=native#text/pascal
 components/dbexport/frmselectexportformat.pp svneol=native#text/plain
+components/dbexport/languages/sdb_consts.pb.po svneol=native#text/plain
+components/dbexport/languages/sdb_consts.po svneol=native#text/plain
 components/dbexport/lazdbexport.lpk svneol=native#text/plain
 components/dbexport/lazdbexport.pas svneol=native#text/plain
 components/dbexport/regdbexport.pp svneol=native#text/plain
+components/dbexport/sdb_consts.pas svneol=native#text/plain
 components/dbexport/tcsvexporter.xpm svneol=native#text/plain
 components/dbexport/tfixedlengthexporter.xpm svneol=native#text/plain
 components/dbexport/tfpdataexporter.xpm svneol=native#text/plain
