* Patch from Marcelo B. Paula to enable internationalization
git-svn-id: trunk@21585 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4954,8 +4954,12 @@ tools/lazdatadesktop/frmselectconnectiontype.pp svneol=native#text/plain
 tools/lazdatadesktop/frmsqlconnect.lfm svneol=native#text/plain
 tools/lazdatadesktop/frmsqlconnect.lrs svneol=native#text/pascal
 tools/lazdatadesktop/frmsqlconnect.pp svneol=native#text/plain
+tools/lazdatadesktop/languages/lazdatadeskstr.pb.po svneol=native#text/plain
+tools/lazdatadesktop/languages/lazdatadeskstr.po svneol=native#text/plain
+tools/lazdatadesktop/lazdatadeskstr.pas svneol=native#text/plain
 tools/lazdatadesktop/lazdatadesktop.lpi svneol=native#text/plain
 tools/lazdatadesktop/lazdatadesktop.lpr svneol=native#text/plain
+tools/lazdatadesktop/lazdatadesktop.lrs svneol=native#text/plain
 tools/lazdatadesktop/querypanel.lrs svneol=native#text/pascal
 tools/lazdatadesktop/querypanel.pp svneol=native#text/plain
 tools/lazres.lpi svneol=native#text/plain
