examples: started example for designer mediator
git-svn-id: trunk@21627 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2360,6 +2360,18 @@ examples/designerbaseclass/example/demo1.lpr svneol=native#text/plain
 examples/designerbaseclass/example/unit1.lfm svneol=native#text/plain
 examples/designerbaseclass/example/unit1.lrs svneol=native#text/pascal
 examples/designerbaseclass/example/unit1.pas svneol=native#text/plain
+examples/designnonlcl/README.txt svneol=native#text/plain
+examples/designnonlcl/mywidgetdesigner.pas svneol=native#text/plain
+examples/designnonlcl/mywidgetset.pas svneol=native#text/plain
+examples/designnonlcl/notlcldesigner.lpk svneol=native#text/plain
+examples/designnonlcl/notlcldesigner.pas svneol=native#text/plain
+examples/designnonlcl/project/NonLCL1.ico -text svneol=unset#image/ico
+examples/designnonlcl/project/NonLCL1.lpi svneol=native#text/plain
+examples/designnonlcl/project/NonLCL1.lpr svneol=native#text/plain
+examples/designnonlcl/project/NonLCL1.manifest svneol=native#text/plain
+examples/designnonlcl/project/unit1.lfm svneol=native#text/plain
+examples/designnonlcl/project/unit1.lrs svneol=native#text/plain
+examples/designnonlcl/project/unit1.pas svneol=native#text/plain
 examples/dlgform.pp svneol=native#text/pascal
 examples/docking/project1.ico -text svneol=unset#image/icon
 examples/docking/project1.lpi svneol=native#text/plain
