updated Russian translations from Maxim Ganetsky
git-svn-id: trunk@21628 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -280,6 +280,7 @@ components/datadict/frmselectcodegenerator.pp svneol=native#text/plain
 components/datadict/idedatadict.pp svneol=native#text/plain
 components/datadict/languages/ldd_consts.pb.po svneol=native#text/plain
 components/datadict/languages/ldd_consts.po svneol=native#text/plain
+components/datadict/languages/ldd_consts.ru.po svneol=native#text/plain
 components/datadict/lazdatadict.lpk svneol=native#text/plain
 components/datadict/lazdatadict.pas svneol=native#text/plain
 components/datadict/ldd_consts.pas svneol=native#text/plain
@@ -323,6 +324,7 @@ components/dbexport/frmselectexportformat.lrs svneol=native#text/pascal
 components/dbexport/frmselectexportformat.pp svneol=native#text/plain
 components/dbexport/languages/sdb_consts.pb.po svneol=native#text/plain
 components/dbexport/languages/sdb_consts.po svneol=native#text/plain
+components/dbexport/languages/sdb_consts.ru.po svneol=native#text/plain
 components/dbexport/lazdbexport.lpk svneol=native#text/plain
 components/dbexport/lazdbexport.pas svneol=native#text/plain
 components/dbexport/regdbexport.pp svneol=native#text/plain
@@ -4970,6 +4972,7 @@ tools/lazdatadesktop/frmsqlconnect.lrs svneol=native#text/pascal
 tools/lazdatadesktop/frmsqlconnect.pp svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadeskstr.pb.po svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadeskstr.po svneol=native#text/plain
+tools/lazdatadesktop/languages/lazdatadeskstr.ru.po svneol=native#text/plain
 tools/lazdatadesktop/lazdatadeskstr.pas svneol=native#text/plain
 tools/lazdatadesktop/lazdatadesktop.lpi svneol=native#text/plain
 tools/lazdatadesktop/lazdatadesktop.lpr svneol=native#text/plain
