* Patches from Maxim Ganetsky to improve localization
git-svn-id: trunk@21675 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4973,6 +4973,9 @@ tools/lazdatadesktop/frmsqlconnect.pp svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadeskstr.pb.po svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadeskstr.po svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadeskstr.ru.po svneol=native#text/plain
+tools/lazdatadesktop/languages/lazdatadesktop.pb.po svneol=native#text/plain
+tools/lazdatadesktop/languages/lazdatadesktop.po svneol=native#text/plain
+tools/lazdatadesktop/languages/lazdatadesktop.ru.po svneol=native#text/plain
 tools/lazdatadesktop/lazdatadeskstr.pas svneol=native#text/plain
 tools/lazdatadesktop/lazdatadesktop.lpi svneol=native#text/plain
 tools/lazdatadesktop/lazdatadesktop.lpr svneol=native#text/plain
