--- a/.gitattributes
+++ b/.gitattributes
@@ -63,9 +63,13 @@ components/chmhelp/lhelp/lhelpcore.lfm svneol=native#text/plain
 components/chmhelp/lhelp/lhelpcore.lrs svneol=native#text/pascal
 components/chmhelp/lhelp/lhelpcore.pas svneol=native#text/plain
 components/chmhelp/lhelp/lnethttpdataprovider.pas svneol=native#text/plain
+components/chmhelp/packages/help/Makefile svneol=native#text/plain
+components/chmhelp/packages/help/Makefile.fpc svneol=native#text/plain
 components/chmhelp/packages/help/lhelpcontrol.pas svneol=native#text/plain
 components/chmhelp/packages/help/lhelpcontrolpkg.lpk svneol=native#text/plain
 components/chmhelp/packages/help/lhelpcontrolpkg.pas svneol=native#text/plain
+components/chmhelp/packages/idehelp/Makefile svneol=native#text/plain
+components/chmhelp/packages/idehelp/Makefile.fpc svneol=native#text/plain
 components/chmhelp/packages/idehelp/chmhelppkg.lpk svneol=native#text/plain
 components/chmhelp/packages/idehelp/chmhelppkg.pas svneol=native#text/plain
 components/chmhelp/packages/idehelp/lazchmhelp.pas svneol=native#text/plain
