IDE: fixed creating fpdoc files for IDEIntf
git-svn-id: trunk@21701 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3209,6 +3209,7 @@ ideintf/componenteditors.pas svneol=native#text/pascal
 ideintf/componentreg.pas svneol=native#text/pascal
 ideintf/componenttreeview.pas svneol=native#text/pascal
 ideintf/dbpropedits.pas svneol=native#text/pascal
+ideintf/docs/formeditingintf.xml svneol=native#text/plain
 ideintf/fieldseditor.lfm svneol=native#text/plain
 ideintf/fieldseditor.lrs svneol=native#text/pascal
 ideintf/fieldseditor.pas svneol=native#text/pascal
