--- a/.gitattributes
+++ b/.gitattributes
@@ -4054,6 +4054,8 @@ lcl/interfaces/carbon/README.txt svneol=native#text/plain
 lcl/interfaces/carbon/agl.pp svneol=native#text/plain
 lcl/interfaces/carbon/carbonbars.pp svneol=native#text/pascal
 lcl/interfaces/carbon/carbonbuttons.pp svneol=native#text/pascal
+lcl/interfaces/carbon/carboncalendar.pas svneol=native#text/plain
+lcl/interfaces/carbon/carboncalendarview.pas svneol=native#text/plain
 lcl/interfaces/carbon/carboncanvas.pp svneol=native#text/pascal
 lcl/interfaces/carbon/carboncaret.pas svneol=native#text/pascal
 lcl/interfaces/carbon/carbonclipboard.pp svneol=native#text/pascal
