--- a/.gitattributes
+++ b/.gitattributes
@@ -1751,6 +1751,7 @@ components/tachart/demo/save/savedemo.lpr svneol=native#text/plain
 components/tachart/tachartlazaruspkg.lpk svneol=native#text/plain
 components/tachart/tachartlazaruspkg.pas svneol=native#text/plain
 components/tachart/tachartutils.pas svneol=native#text/plain
+components/tachart/tacustomseries.pas svneol=native#text/plain
 components/tachart/tadbsource.pas svneol=native#text/pascal
 components/tachart/tagraph.lrs svneol=native#text/pascal
 components/tachart/tagraph.pas svneol=native#text/plain
