--- a/.gitattributes
+++ b/.gitattributes
@@ -1743,6 +1743,11 @@ components/tachart/demo/func/funcdemo.lpr svneol=native#text/plain
 components/tachart/demo/func/main.lfm svneol=native#text/plain
 components/tachart/demo/func/main.lrs svneol=native#text/pascal
 components/tachart/demo/func/main.pas svneol=native#text/plain
+components/tachart/demo/legend/legenddemo.lpi svneol=native#text/plain
+components/tachart/demo/legend/legenddemo.lpr svneol=native#text/pascal
+components/tachart/demo/legend/main.lfm svneol=native#text/plain
+components/tachart/demo/legend/main.lrs svneol=native#text/plain
+components/tachart/demo/legend/main.pas svneol=native#text/pascal
 components/tachart/demo/save/main.lfm svneol=native#text/plain
 components/tachart/demo/save/main.lrs svneol=native#text/pascal
 components/tachart/demo/save/main.pas svneol=native#text/plain
