--- a/.gitattributes
+++ b/.gitattributes
@@ -81,6 +81,7 @@ components/aggpas/image_resample.dpr svneol=native#text/plain
 components/aggpas/image_transforms.dpr svneol=native#text/plain
 components/aggpas/image_transforms.txt svneol=native#text/plain
 components/aggpas/interactive_polygon_.pas svneol=native#text/plain
+components/aggpas/lazarus/aggpaslcl.lpk svneol=native#text/plain
 components/aggpas/line_patterns.dpr svneol=native#text/plain
 components/aggpas/lion.dpr svneol=native#text/plain
 components/aggpas/lion_lens.dpr svneol=native#text/plain
@@ -295,6 +296,9 @@ components/aggpas/src/pf_rgb565_gamma.inc svneol=native#text/plain
 components/aggpas/src/pf_rgb565_pre.inc svneol=native#text/plain
 components/aggpas/src/pf_rgba32.inc svneol=native#text/plain
 components/aggpas/src/pf_rgba32_pre.inc svneol=native#text/plain
+components/aggpas/src/platform/lcl/agg_linux_mini_libc.pas svneol=native#text/plain
+components/aggpas/src/platform/lcl/agg_platform_support.pas svneol=native#text/plain
+components/aggpas/src/platform/lcl/file_utils_.pas svneol=native#text/plain
 components/aggpas/src/platform/linux/agg_linux_mini_libc.pas svneol=native#text/plain
 components/aggpas/src/platform/linux/agg_platform_support.pas svneol=native#text/plain
 components/aggpas/src/platform/linux/file_utils_.pas svneol=native#text/plain
