--- a/.gitattributes
+++ b/.gitattributes
@@ -82,6 +82,11 @@ components/aggpas/image_transforms.dpr svneol=native#text/plain
 components/aggpas/image_transforms.txt svneol=native#text/plain
 components/aggpas/interactive_polygon_.pas svneol=native#text/plain
 components/aggpas/lazarus/aggpaslcl.lpk svneol=native#text/plain
+components/aggpas/lazarus/example/AggPasInLCLDemo1.lpi svneol=native#text/plain
+components/aggpas/lazarus/example/AggPasInLCLDemo1.lpr svneol=native#text/plain
+components/aggpas/lazarus/example/unit1.lfm svneol=native#text/plain
+components/aggpas/lazarus/example/unit1.lrs svneol=native#text/plain
+components/aggpas/lazarus/example/unit1.pas svneol=native#text/plain
 components/aggpas/line_patterns.dpr svneol=native#text/plain
 components/aggpas/lion.dpr svneol=native#text/plain
 components/aggpas/lion_lens.dpr svneol=native#text/plain
