TAChart: Create initial documentation. Document most TChart properties.
git-svn-id: trunk@22081 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2076,6 +2076,9 @@ components/tachart/demo/save/main.lrs svneol=native#text/pascal
 components/tachart/demo/save/main.pas svneol=native#text/plain
 components/tachart/demo/save/savedemo.lpi svneol=native#text/plain
 components/tachart/demo/save/savedemo.lpr svneol=native#text/plain
+components/tachart/fpdoc/tagraph.xml svneol=native#text/plain
+components/tachart/fpdoc/taseries.xml svneol=native#text/plain
+components/tachart/fpdoc/tatypes.xml svneol=native#text/plain
 components/tachart/tachartlazaruspkg.lpk svneol=native#text/plain
 components/tachart/tachartlazaruspkg.pas svneol=native#text/plain
 components/tachart/tachartutils.pas svneol=native#text/plain
