--- a/.gitattributes
+++ b/.gitattributes
@@ -2076,8 +2076,13 @@ components/tachart/demo/save/main.lrs svneol=native#text/pascal
 components/tachart/demo/save/main.pas svneol=native#text/plain
 components/tachart/demo/save/savedemo.lpi svneol=native#text/plain
 components/tachart/demo/save/savedemo.lpr svneol=native#text/plain
+components/tachart/fpdoc/tachartutils.xml svneol=native#text/plain
+components/tachart/fpdoc/tacustomseries.xml svneol=native#text/plain
+components/tachart/fpdoc/tadbsource.xml svneol=native#text/plain
 components/tachart/fpdoc/tagraph.xml svneol=native#text/plain
+components/tachart/fpdoc/talegend.xml svneol=native#text/plain
 components/tachart/fpdoc/taseries.xml svneol=native#text/plain
+components/tachart/fpdoc/tasources.xml svneol=native#text/plain
 components/tachart/fpdoc/tatypes.xml svneol=native#text/plain
 components/tachart/tachartlazaruspkg.lpk svneol=native#text/plain
 components/tachart/tachartlazaruspkg.pas svneol=native#text/plain
