IDE: added dialog to ask for component name
git-svn-id: trunk@22202 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2301,6 +2301,9 @@ designer/aligncompsdlg.pp svneol=native#text/pascal
 designer/anchoreditor.lfm svneol=native#text/plain
 designer/anchoreditor.lrs svneol=native#text/pascal
 designer/anchoreditor.pas svneol=native#text/pascal
+designer/askcompnamedlg.lfm svneol=native#text/plain
+designer/askcompnamedlg.lrs svneol=native#text/plain
+designer/askcompnamedlg.pas svneol=native#text/plain
 designer/changeclassdialog.lfm svneol=native#text/plain
 designer/changeclassdialog.lrs svneol=native#text/pascal
 designer/changeclassdialog.pas svneol=native#text/pascal
