--- a/.gitattributes
+++ b/.gitattributes
@@ -3083,7 +3083,7 @@ examples/toolbar.lpi svneol=native#text/plain
 examples/toolbar.pp svneol=native#text/pascal
 examples/trackbar.lpi svneol=native#text/plain
 examples/trackbar.pp svneol=native#text/pascal
-examples/trayicon/createbundle.sh -text
+examples/trayicon/createbundle.sh svneol=native#text/plain
 examples/trayicon/frmtest.dfm -text
 examples/trayicon/frmtest.lfm -text
 examples/trayicon/frmtest.lrs svneol=native#text/pascal
