--- a/.gitattributes
+++ b/.gitattributes
@@ -5329,6 +5329,7 @@ tools/lazdatadesktop/frmselectconnectiontype.pp svneol=native#text/plain
 tools/lazdatadesktop/frmsqlconnect.lfm svneol=native#text/plain
 tools/lazdatadesktop/frmsqlconnect.lrs svneol=native#text/pascal
 tools/lazdatadesktop/frmsqlconnect.pp svneol=native#text/plain
+tools/lazdatadesktop/languages/lazdatadesktop.de.po svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadesktop.pb.po svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadesktop.po svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadesktop.ru.po svneol=native#text/plain
